--- a/index.html
+++ b/index.html
@@ -146,8 +146,16 @@
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
             >
-              <a href="#slide4" class="btn btn-circle">❮</a>
-              <a href="#slide2" class="btn btn-circle">❯</a>
+              <a
+                href="#slide4"
+                class="btn btn-circle bg-black border-none text-white"
+                >❮</a
+              >
+              <a
+                href="#slide2"
+                class="btn btn-circle bg-black border-none text-white"
+                >❯</a
+              >
             </div>
           </div>
           <!-- Add similar content to the other slides -->
@@ -176,8 +184,16 @@
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
             >
-              <a href="#slide1" class="btn btn-circle">❮</a>
-              <a href="#slide3" class="btn btn-circle">❯</a>
+              <a
+                href="#slide1"
+                class="btn btn-circle bg-black border-none text-white"
+                >❮</a
+              >
+              <a
+                href="#slide3"
+                class="btn btn-circle bg-black border-none text-white"
+                >❯</a
+              >
             </div>
           </div>
           <div id="slide3" class="carousel-item relative w-full">
@@ -205,8 +221,16 @@
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
             >
-              <a href="#slide2" class="btn btn-circle">❮</a>
-              <a href="#slide4" class="btn btn-circle">❯</a>
+              <a
+                href="#slide2"
+                class="btn btn-circle bg-black border-none text-white"
+                >❮</a
+              >
+              <a
+                href="#slide4"
+                class="btn btn-circle bg-black border-none text-white"
+                >❯</a
+              >
             </div>
           </div>
           <div id="slide4" class="carousel-item relative w-full">
@@ -234,8 +258,16 @@
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
             >
-              <a href="#slide3" class="btn btn-circle">❮</a>
-              <a href="#slide1" class="btn btn-circle">❯</a>
+              <a
+                href="#slide3"
+                class="btn btn-circle bg-black border-none text-white"
+                >❮</a
+              >
+              <a
+                href="#slide1"
+                class="btn btn-circle bg-black border-none text-white"
+                >❯</a
+              >
             </div>
           </div>
         </div>
@@ -328,35 +360,56 @@
             <div class="px-10 text-center space-y-2">
               <h2 class="text-xl font-bold border-b-2 px-">12.90$ - 18.85$!</h2>
               <p>Apples</p>
-              <div class="rating rating-sm gap-2">
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
-                />
+              <div class="rating rating-md rating-half">
+                <input type="radio" name="rating-5" class="rating-hidden" />
+                <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-1" checked />
+                <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
               </div>
-              <p class="text-[#F85559]">Details</p>
+              <!-- Open the modal using ID.showModal() method -->
+              <br>
+              <button class="text-[#F85559]" onclick="my_modal_1.showModal()">
+                Details
+              </button>
+              <dialog id="my_modal_1" class="modal">
+                <form method="dialog" class="modal-box max-w-[25rem] max-h-full">
+                  <figure class="mb-5">
+                    <img src="./images/fruit6.png" alt="Shoes" />
+                  </figure>
+                  <div class="px-10 text-center space-y-4">
+                    <h2 class="text-xl font-bold">
+                      Apples
+                    </h2>
+                    <p class="max-w-70 mx-auto">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    <div class="rating rating-md rating-half">
+                      <input type="radio" name="rating-5" class="rating-hidden" />
+                      <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-1" checked />
+                      <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="rating-5" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                    </div>
+                  </div>
+                  <div class="modal-action justify-center gap-4">
+                    <button class="btn btn-outline btn-error">Close</button>
+                    <button class="btn bg-[#F85559] text-white border-none">
+                      Shop Now
+                    </button>
+                  </div>
+                </form>
+              </dialog>
             </div>
           </div>
           <!-- card-2 -->
@@ -373,28 +426,28 @@
                 <input
                   type="radio"
                   name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
+                  class="mask mask-star-2 bg-[#F85559]"
                 />
                 <input
                   type="radio"
                   name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
+                  class="mask mask-star-2 bg-[#F85559]"
                   checked
                 />
                 <input
                   type="radio"
                   name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
+                  class="mask mask-star-2 bg-[#F85559]"
                 />
                 <input
                   type="radio"
                   name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
+                  class="mask mask-star-2 bg-[#F85559]"
                 />
                 <input
                   type="radio"
                   name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
+                  class="mask mask-star-2 bg-[#F85559]"
                 />
               </div>
               <p class="text-[#F85559]">Details</p>
@@ -414,28 +467,28 @@
                 <input
                   type="radio"
                   name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
+                  class="mask mask-star-2 bg-[#F85559]"
                 />
                 <input
                   type="radio"
                   name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
+                  class="mask mask-star-2 bg-[#F85559]"
                   checked
                 />
                 <input
                   type="radio"
                   name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
+                  class="mask mask-star-2 bg-[#F85559]"
                 />
                 <input
                   type="radio"
                   name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
+                  class="mask mask-star-2 bg-[#F85559]"
                 />
                 <input
                   type="radio"
                   name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
+                  class="mask mask-star-2 bg-[#F85559]"
                 />
               </div>
               <p class="text-[#F85559]">Details</p>
@@ -455,28 +508,28 @@
                 <input
                   type="radio"
                   name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
+                  class="mask mask-star-2 bg-[#F85559]"
                 />
                 <input
                   type="radio"
                   name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
+                  class="mask mask-star-2 bg-[#F85559]"
                   checked
                 />
                 <input
                   type="radio"
                   name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
+                  class="mask mask-star-2 bg-[#F85559]"
                 />
                 <input
                   type="radio"
                   name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
+                  class="mask mask-star-2 bg-[#F85559]"
                 />
                 <input
                   type="radio"
                   name="rating-6"
-                  class="mask mask-star-2 bg-orange-400"
+                  class="mask mask-star-2 bg-[#F85559]"
                 />
               </div>
               <p class="text-[#F85559]">Details</p>
@@ -650,7 +703,9 @@
                 class="space-y-2 max-w-[22rem] text-center lg:text-right lg:justify-end"
               >
                 <h4 class="text-xl font-bold">Integrated Supplier</h4>
-                <hr class="lg:ml-auto mx-auto lg:mx-0 w-24 border-black border-b-1" />
+                <hr
+                  class="lg:ml-auto mx-auto lg:mx-0 w-24 border-black border-b-1"
+                />
                 <p class="text-sm">
                   Professional employees are there for you to pick the most
                   amazing and fresh fruits.
@@ -668,7 +723,9 @@
                 class="space-y-2 max-w-[22rem] text-center lg:text-right lg:justify-end"
               >
                 <h4 class="text-xl font-bold">Sustainable Practice</h4>
-                <hr class="lg:ml-auto mx-auto lg:mx-0 w-24 border-black border-b-1" />
+                <hr
+                  class="lg:ml-auto mx-auto lg:mx-0 w-24 border-black border-b-1"
+                />
                 <p class="text-sm">
                   Professional employees are there for you to pick the most
                   amazing and fresh fruits.
@@ -676,7 +733,7 @@
               </div>
             </div>
             <!-- service 6 -->
-            <div class="lg:flex gap-3 mb-5 lg:flex-row-reverse ">
+            <div class="lg:flex gap-3 mb-5 lg:flex-row-reverse">
               <div
                 class="w-14 h-14 lg:h-8 bg-gray-300 flex justify-center items-center rounded-full mt-2 mx-auto"
               >
@@ -686,7 +743,9 @@
                 class="space-y-2 max-w-[22rem] text-center lg:text-right lg:justify-end"
               >
                 <h4 class="text-xl font-bold">The Benefits Only</h4>
-                <hr class="lg:ml-auto mx-auto lg:mx-0 w-24 border-black border-b-1" />
+                <hr
+                  class="lg:ml-auto mx-auto lg:mx-0 w-24 border-black border-b-1"
+                />
                 <p class="text-sm">
                   Professional employees are there for you to pick the most
                   amazing and fresh fruits.
