--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
           <div id="slide1" class="carousel-item relative w-full">
             <div
               class="hero min-h-[24rem] bg-cover bg-center"
-              style="background-image: url(/images/banner4.png)"
+              style="background-image: url(/images/banner1.png)"
             >
               <div
                 class="carousel-overlay flex flex-col items-center justify-center bg-black bg-opacity-60 w-full h-full font-extrabold"
               >
-                <h1 class="text-6xl font-extrabold text-white mb-4 text-center">
+                <h1 class="text-4xl lg:text-5xl font-extrabold text-white mb-4 text-center">
                   Exotic tastes at your <br />
                   doorstep
                 </h1>
-                <p class="text-white mb-6">
+                <p class="text-white mb-6 font-light">
                   We supply highly quality organic products
                 </p>
                 <a
@@ -167,7 +167,7 @@
               <div
                 class="carousel-overlay flex flex-col items-center justify-center bg-black bg-opacity-60 w-full h-full font-extrabold"
               >
-                <h1 class="text-6xl font-extrabold text-white mb-4 text-center">
+                <h1 class="text-4xl lg:text-5xl font-extrabold text-white mb-4 text-center">
                   Exotic tastes at your <br />
                   doorstep
                 </h1>
@@ -204,7 +204,7 @@
               <div
                 class="carousel-overlay flex flex-col items-center justify-center bg-black bg-opacity-60 w-full h-full font-extrabold"
               >
-                <h1 class="text-6xl font-extrabold text-white mb-4 text-center">
+                <h1 class="text-4xl lg:text-5xl font-extrabold text-white mb-4 text-center">
                   Exotic tastes at your <br />
                   doorstep
                 </h1>
@@ -236,12 +236,12 @@
           <div id="slide4" class="carousel-item relative w-full">
             <div
               class="hero min-h-[24rem] bg-cover bg-center"
-              style="background-image: url(/images/banner1.png)"
+              style="background-image: url(/images/banner4.png)"
             >
               <div
                 class="carousel-overlay flex flex-col items-center justify-center bg-black bg-opacity-60 w-full h-full font-extrabold"
               >
-                <h1 class="text-6xl font-extrabold text-white mb-4 text-center">
+                <h1 class="text-4xl lg:text-5xl font-extrabold text-white mb-4 text-center">
                   Exotic tastes at your <br />
                   doorstep
                 </h1>
@@ -301,9 +301,9 @@
       <div class="max-w-screen-lg mx-auto px-0 py-2 my-16">
         <div class="lg:flex justify-between">
           <!-- heading and description -->
-          <div class="lg:max-w-lg space-y-5 text-center lg:text-left">
+          <div class="lg:max-w-lg space-y-5 text-center lg:text-left mb-3">
             <h3 class="text-4xl font-extrabold">Deal of the day</h3>
-            <p>
+            <p class="md:px-16 lg:px-0">
               Contrary to popular belief, is not simply random text. It has
               roots in a piece of classical Latin literature from 45 BC, making
               it over 2000 years old.
@@ -422,35 +422,55 @@
             <div class="px-10 text-center space-y-2">
               <h2 class="text-xl font-bold border-b-2 px-">12.90$ - 18.85$!</h2>
               <p>Orange</p>
-              <div class="rating rating-sm gap-2">
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-[#F85559]"
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-[#F85559]"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-[#F85559]"
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-[#F85559]"
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-[#F85559]"
-                />
+              <div class="rating rating-md rating-half">
+                <input type="radio" name="rating-6" class="rating-hidden" />
+                <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-1" checked />
+                <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
               </div>
-              <p class="text-[#F85559]">Details</p>
+              <br>
+              <button class="text-[#F85559]" onclick="my_modal_2.showModal()">
+                Details
+              </button>
+              <dialog id="my_modal_2" class="modal">
+                <form method="dialog" class="modal-box max-w-[25rem] max-h-full">
+                  <figure class="mb-5">
+                    <img src="./images/fruit7.png" alt="Shoes" />
+                  </figure>
+                  <div class="px-10 text-center space-y-4">
+                    <h2 class="text-xl font-bold">
+                      Orange
+                    </h2>
+                    <p class="max-w-70 mx-auto">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    <div class="rating rating-md rating-half">
+                      <input type="radio" name="rating-6" class="rating-hidden" />
+                      <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-1" checked />
+                      <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="rating-6" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                    </div>
+                  </div>
+                  <div class="modal-action justify-center gap-4">
+                    <button class="btn btn-outline btn-error">Close</button>
+                    <button class="btn bg-[#F85559] text-white border-none">
+                      Shop Now
+                    </button>
+                  </div>
+                </form>
+              </dialog>
             </div>
           </div>
           <!-- card-3 -->
@@ -463,35 +483,55 @@
             <div class="px-10 text-center space-y-2">
               <h2 class="text-xl font-bold border-b-2 px-">12.90$ - 18.85$!</h2>
               <p>Red Dragon</p>
-              <div class="rating rating-sm gap-2">
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-[#F85559]"
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-[#F85559]"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-[#F85559]"
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-[#F85559]"
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-[#F85559]"
-                />
+              <div class="rating rating-md rating-half">
+                <input type="radio" name="rating-8" class="rating-hidden" />
+                <input type="radio" name="rating-8" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-8" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-8" class="bg-[#F85559] mask mask-star-2 mask-half-1" checked />
+                <input type="radio" name="rating-8" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-8" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-8" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-8" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-8" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-8" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-8" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
               </div>
-              <p class="text-[#F85559]">Details</p>
+              <br>
+              <button class="text-[#F85559]" onclick="my_modal_3.showModal()">
+                Details
+              </button>
+              <dialog id="my_modal_3" class="modal">
+                <form method="dialog" class="modal-box max-w-[25rem] max-h-full">
+                  <figure class="mb-5">
+                    <img src="./images/fruit8.png" alt="Shoes" />
+                  </figure>
+                  <div class="px-10 text-center space-y-4">
+                    <h2 class="text-xl font-bold">
+                      Red Dragon
+                    </h2>
+                    <p class="max-w-70 mx-auto">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    <div class="rating rating-md rating-half">
+                      <input type="radio" name="8" class="rating-hidden" />
+                      <input type="radio" name="8" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="8" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="8" class="bg-[#F85559] mask mask-star-2 mask-half-1" checked />
+                      <input type="radio" name="8" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="8" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="8" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="8" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="8" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="8" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="8" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                    </div>
+                  </div>
+                  <div class="modal-action justify-center gap-4">
+                    <button class="btn btn-outline btn-error">Close</button>
+                    <button class="btn bg-[#F85559] text-white border-none">
+                      Shop Now
+                    </button>
+                  </div>
+                </form>
+              </dialog>
             </div>
           </div>
           <!-- card-4 -->
@@ -504,35 +544,55 @@
             <div class="px-10 text-center space-y-2">
               <h2 class="text-xl font-bold border-b-2 px-">12.90$ - 18.85$!</h2>
               <p>Banana</p>
-              <div class="rating rating-sm gap-2">
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-[#F85559]"
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-[#F85559]"
-                  checked
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-[#F85559]"
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-[#F85559]"
-                />
-                <input
-                  type="radio"
-                  name="rating-6"
-                  class="mask mask-star-2 bg-[#F85559]"
-                />
+              <div class="rating rating-md rating-half">
+                <input type="radio" name="rating-9" class="rating-hidden" />
+                <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-1" checked />
+                <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
               </div>
-              <p class="text-[#F85559]">Details</p>
+              <br>
+              <button class="text-[#F85559]" onclick="my_modal_4.showModal()">
+                Details
+              </button>
+              <dialog id="my_modal_4" class="modal">
+                <form method="dialog" class="modal-box max-w-[25rem] max-h-full">
+                  <figure class="mb-5">
+                    <img src="./images/fruit7.png" alt="Shoes" />
+                  </figure>
+                  <div class="px-10 text-center space-y-4">
+                    <h2 class="text-xl font-bold">
+                      Banana
+                    </h2>
+                    <p class="max-w-70 mx-auto">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    <div class="rating rating-md rating-half">
+                      <input type="radio" name="rating-9" class="rating-hidden" />
+                      <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-1" checked />
+                      <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                      <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                      <input type="radio" name="rating-9" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                    </div>
+                  </div>
+                  <div class="modal-action justify-center gap-4">
+                    <button class="btn btn-outline btn-error">Close</button>
+                    <button class="btn bg-[#F85559] text-white border-none">
+                      Shop Now
+                    </button>
+                  </div>
+                </form>
+              </dialog>
             </div>
           </div>
         </div>
